# Hobgoblin

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: agent-task.yml  design-question.yml
.github/workflows/: ci.yml
crates/hobgoblin-cli/: Cargo.toml
crates/hobgoblin-cli/src/: main.rs
crates/hobgoblin-core/: Cargo.toml
crates/hobgoblin-core/src/: lib.rs
crates/hobgoblin-gear/: Cargo.toml
crates/hobgoblin-gear/src/: lib.rs
crates/hobgoblin-planner/: Cargo.toml
crates/hobgoblin-planner/src/: lib.rs
crates/hobgoblin-post/: Cargo.toml
crates/hobgoblin-post/src/: lib.rs
crates/hobgoblin-sim/: Cargo.toml
crates/hobgoblin-sim/src/: lib.rs
docs/: 2d-schematic-preview.md  architecture.md  github-roadmap.md  tauri-icons.md  ui-fusion-workflow.md  ui-testing.md
docs/tasks/: M0-architecture-and-scaffold.md  M1-core-project-model-validation.md  M1-library-models.md  M2-adaptive-rack-stepping.md  M2-gear-derived-dimensions.md  M2-generated-shaping-path.md  M3-operation-graph.md  M3-simulation-preview.md  M4-carvera-postprocessor.md  M5-2d-stack-planning-view.md  M5-tauri-shell.md
examples/exports/: simple_spur_stack.export.json  simple_spur_stack.nc
examples/projects/: simple_spur_stack.hobgoblin.json
examples/projects/invalid/: invalid_validation_cases.hobgoblin.json
scripts/: tauri-dev-server.mjs  ui-smoke.mjs
src/: App.tsx  ShaftModel3D.tsx  geometry.ts  project.ts  projectMutations.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
