[workspace]
members = [
    "crates/hobgoblin-core",
    "crates/hobgoblin-gear",
    "crates/hobgoblin-planner",
    "crates/hobgoblin-post",
    "crates/hobgoblin-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/yaqwsx/Hobgoblin"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
