[package]
name = "hobgoblin-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yaqwsx/Hobgoblin"

[workspace]

[lib]
name = "hobgoblin_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hobgoblin-core = { path = "../crates/hobgoblin-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
