[package]
name = "hobgoblin-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hobgoblin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hobgoblin-core = { path = "../hobgoblin-core" }
hobgoblin-gear = { path = "../hobgoblin-gear" }
hobgoblin-planner = { path = "../hobgoblin-planner" }
hobgoblin-post = { path = "../hobgoblin-post" }
hobgoblin-sim = { path = "../hobgoblin-sim" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
