[package]
name = "hobgoblin-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hobgoblin-core = { path = "../hobgoblin-core" }
hobgoblin-gear = { path = "../hobgoblin-gear" }
hobgoblin-post = { path = "../hobgoblin-post" }
serde.workspace = true
