[package]
name = "hobgoblin-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hobgoblin-core = { path = "../hobgoblin-core" }
hobgoblin-post = { path = "../hobgoblin-post" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
